assets/timtr.css
/*!  timtr.css v0.1
 #
 */


:root {
    
    --bg-color: #0d1114;   /* modified #0d1116 main background */
    --bg-secondary-color: #0d0d0c;  /* different dark background for highlights */
    
    
    /** Previous color settings for the background
     --bg-color: #24292e;
     --bg-secondary-color: #1d1e1f;
     */
    
    --color-primary: #ff6a00;  /** bright orange */
    --color-lightGrey: #d2d6dd;
    --color-grey: #747681;
    --color-darkGrey: #3f4144;
    --color-error: #d43939;
    --color-success: #28bd14;
    --grid-maxWidth: 100rem;
    --grid-gutter: 2rem;
    --font-size: 1.4rem;
    --font-color: #dfe1e0;
    --font-family-sans: -apple-system, BlinkMacSystemFont, Avenir, "Avenir Next",
    "Segoe UI", "Roboto", "Oxygen", "Ubuntu", "Cantarell", "Fira Sans",
    "Droid Sans", "Helvetica Neue", sans-serif;
    --font-family-mono: monaco, "Consolas", "Lucida Console", monospace;
    
}


html {
  -webkit-box-sizing: border-box;
          box-sizing: border-box;
  font-size: 100%;
  /*   font-size: 62.5%; */
  line-height: 1.15;
  -ms-text-size-adjust: 100%;
  -webkit-text-size-adjust: 100%;
}
*, *:before, *:after {
  -webkit-box-sizing: inherit;
          box-sizing: inherit;
}

body {
  background-color: var(--bg-color);
  line-height: 1.6;
  font-size: var(--font-size);
  color: var(--font-color);
  font-family: "Segoe UI", "Helvetica Neue", sans-serif; /*fallback*/
  font-family: var(--font-family-sans);
  margin: 0;
  padding: 0;
}
h1,
h2,
h3,
h4,
h5,
h6 {
  font-weight: 500;
  margin: 0em 0em 0em 0em;
  /* margin: 0.05em 0 0.05em 0;  */

  color: #ff6a00;
}
h1 {
  font-size: 3.0em;
  margin: 0.1em 0 0.1em 0;
}
h2 {
  font-size: 1.75em;
}
h3 {
  font-size: 1.5em;
}
h4 {
  font-size: 1.25em;
}
h5 {
  font-size: 1em;
}
h6 {
  font-size: 0.85em;
}
a {
  color: var(--color-primary);
  text-decoration: none;
}
a:hover:not(.button) {
  opacity: 0.75;
}
button {
  font-family: inherit;
}
p {
  margin-top: 0;
  margin-bottom: 10px; /* between paragraphs */

}

/*! remove the bullet "dot" for these line items, e.g.:

    <ul class="nobull">
      <li>List item with no bullet</li>
    </ul>
*/
.list-no-bullets {
  list-style-type: none;
}

/*!  added emphasis */
em {
  font-style: normal;
  font-weight: normal;
  color: #ff6a00;

  /* font-weight: 500; */

}

.container {
    max-width: var(--grid-maxWidth);
    margin: 0 auto;
    width: 900px;
    /* width: 96%;    old version */
    padding: 0 calc(var(--grid-gutter) / 2);
}

blockquote {
  background-color: var(--bg-secondary-color);
  width: 890px;
  border-left: 3px solid var(--color-lightGrey);
  margin-left: 10px;
  padding-left: 1.0rem;
  padding-bottom: 0.5rem;
  padding-top: 0.5rem;
  /* padding: 0.5rem 0.5rem 1.5rem 1.0rem; */
}
dl dt {
  font-weight: bold;
}
hr {
  border: none;
  background-color: var(--color-lightGrey);
  height: 1px;
  margin: 1rem 0;
}
table {
  width: 100%;
  border: none;
  border-collapse: collapse;
  border-spacing: 0;
  text-align: left;
}
table.striped tr:nth-of-type(2n) {
  background-color: var(--bg-secondary-color);
}
td,
th {
  vertical-align: middle;
  padding: 1.2rem 0.4rem;
}
thead {
  border-bottom: 2px solid var(--color-lightGrey);
}
tfoot {
  border-top: 2px solid var(--color-lightGrey);
}
code,
kbd,
pre,
samp,
tt {
  font-family: var(--font-family-mono);
}
code,
kbd {
  padding: 0 0.4rem;
  font-size: 80%;
  white-space: pre-wrap;
  border-radius: 4px;
  background-color: var(--bg-secondary-color);
  color: #4094d1;
}
pre {
  background-color: var(--bg-secondary-color);
  font-size: 1em;
  padding: 1rem;
  overflow-x: auto;
}
pre code {
  background: none;
  padding: 0;
}
abbr[title] {
  border-bottom: none;
  text-decoration: underline;
  -webkit-text-decoration: underline dotted;
          text-decoration: underline dotted;
}
img {
  max-width: 100%;
}
fieldset {
  border: 1px solid var(--color-lightGrey);
}
iframe {
  border: 0;
}
.row {
    display: -webkit-box;
    display: -ms-flexbox;
    display: flex;
    -webkit-box-orient: horizontal;
    -webkit-box-direction: normal;
        -ms-flex-flow: row wrap;
            flex-flow: row wrap;
    -webkit-box-pack: start;
        -ms-flex-pack: start;
            justify-content: flex-start;
    margin-left: calc(var(--grid-gutter) / -2);
    margin-right: calc(var(--grid-gutter) / -2);
}
.row.reverse {
    -webkit-box-orient: horizontal;
    -webkit-box-direction: reverse;
        -ms-flex-direction: row-reverse;
            flex-direction: row-reverse;
}



/* Colors */
.bg-primary {
    background-color: var(--color-primary) !important;
}
.bg-light {
    background-color: var(--color-lightGrey) !important;
}
.bg-dark {
    background-color: var(--color-darkGrey) !important;
}
.bg-grey {
    background-color: var(--color-grey) !important;
}
.bg-error {
    background-color: var(--color-error) !important;
}
.bg-success {
    background-color: var(--color-success) !important;
}
.bd-primary {
    border: 1px solid var(--color-primary) !important;
}
.bd-light {
    border: 1px solid var(--color-lightGrey) !important;
}
.bd-dark {
    border: 1px solid var(--color-darkGrey) !important;
}
.bd-grey {
    border: 1px solid var(--color-grey) !important;
}
.bd-error {
    border: 1px solid var(--color-error) !important;
}
.bd-success {
    border: 1px solid var(--color-success) !important;
}
.text-primary {
    color: var(--color-primary) !important;
}
.text-light {
    color: var(--color-lightGrey) !important;
}
.text-dark {
    color: var(--color-darkGrey) !important;
}
.text-grey {
    color: var(--color-grey) !important;
}
.text-error {
    color: var(--color-error) !important;
}
.text-success {
    color: var(--color-success) !important;
}
.text-white {
    color: #fff !important;
}



/* Position & alignment */
.pull-right {
    float: right !important;
}
.pull-left {
    float: left !important;
}
.text-center {
    text-align: center;
}
.text-left {
    text-align: left;
}
.text-right {
    text-align: right;
}
.text-justify {
    text-align: justify;
}
.text-uppercase {
    text-transform: uppercase;
}
.text-lowercase {
    text-transform: lowercase;
}
.text-capitalize {
    text-transform: capitalize;
}
.is-full-screen {
    width: 100%;
    min-height: 100vh;
}
.is-full-width {
    width: 100% !important;
}
.is-vertical-align {
    display: -webkit-box;
    display: -ms-flexbox;
    display: flex;
    -webkit-box-align: center;
        -ms-flex-align: center;
            align-items: center;
}
.is-horizontal-align {
    display: -webkit-box;
    display: -ms-flexbox;
    display: flex;
    -webkit-box-pack: center;
        -ms-flex-pack: center;
            justify-content: center;
}
.is-center {
    display: -webkit-box;
    display: -ms-flexbox;
    display: flex;
    -webkit-box-align: center;
        -ms-flex-align: center;
            align-items: center;
    -webkit-box-pack: center;
        -ms-flex-pack: center;
            justify-content: center;
}
.is-right {
    display: -webkit-box;
    display: -ms-flexbox;
    display: flex;
    -webkit-box-align: center;
        -ms-flex-align: center;
            align-items: center;
    -webkit-box-pack: end;
        -ms-flex-pack: end;
            justify-content: flex-end;
}
.is-left {
    display: -webkit-box;
    display: -ms-flexbox;
    display: flex;
    -webkit-box-align: center;
        -ms-flex-align: center;
            align-items: center;
    -webkit-box-pack: start;
        -ms-flex-pack: start;
            justify-content: flex-start;
}
.is-fixed {
    position: fixed;
    width: 100%;
}
.is-paddingless {
    padding: 0 !important;
}
.is-marginless {
    margin: 0 !important;
}
.is-pointer {
    cursor: pointer !important;
}
.is-rounded {
    border-radius: 100%;
}
.clearfix {
    content: "";
    display: table;
    clear: both;
}
.is-hidden {
    display: none !important;
}

